deploy/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sam3-api-ingress
  namespace: dani
spec:
  rules:
    - host: sam3-api.iict-rad.iict-heig-vd.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sam3-api
                port:
                  number: 8000
